# QuantGenerated

./: .env.example  .gitignore  README.md  docker-compose.postgres.yml  main.py  main_agent_registry.py  main_ai_chat.py  main_ai_doctor.py  main_compare_symbol_sources.py  main_live_loop.py  main_live_mt5.py  main_live_supervisor.py  main_mt5_fill_diagnostic.py  main_mt5_test.py  main_portfolio_allocator.py  main_postgres_bootstrap.py  main_refresh_symbol_cache.py  main_reorganize_artifacts.py  main_report_mt5_calibration.py  main_symbol_execute.py  main_symbol_execution_set.py  main_symbol_research.py  open_ftmo_mt5.bat  pyproject.toml  quant_data.duckdb  quant_data.duckdb.wal  run_live_loop.bat  start_postgres.bat
artifacts/: btc_crypto_breakout_reclaim_15m_all_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim_15m_europe_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim_15m_overlap_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim_15m_us_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim_5m_europe_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim_5m_europe_symbol_candidate_trades.csv  btc_crypto_breakout_reclaim_5m_us_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim__15m_all_15m_all_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim__15m_all_15m_all_symbol_candidate_trades.csv  btc_crypto_breakout_reclaim__15m_all__exit_fastfail_15m_all_symbol_candidate_analysis.txt  btc_crypto_breakout_reclaim__15m_all__exit_fastfail_15m_all_symbol_candidate_trades.csv  (+4309 more)
dashboard/: app.py
docs/: architecture_map.md  (+24 more)
(+32794 files in other folders)
